tests/baselines/reference/unicodeExtendedEscapesInStrings24_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES6.ts(2,27): error TS1196: '}' expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES6.ts (1 errors) ====
    
    var x = "\u{00000000000067
                              
!!! error TS1196: '}' expected.
    